refactor OSD & relation tests to create test objects programmatically
(instead of using CreateTestDB.sql)